# hdx-scraper-ipc

./: .dockerignore  .gitignore  CLAUDE.md  README.md  analysis_dates.txt  hatch.toml  ipc.py  pyproject.toml  requirements-test.txt  requirements.txt  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-script.yml  run-python-tests.yaml
config/: project_configuration.yaml  project_configuration.yml
tests/: test_ipc.py
tests/fixtures/: hdx_hapi_food_security_global.csv  ipc_afg.geojson  ipc_afg_area_long.csv  ipc_afg_area_long_latest.csv  ipc_afg_area_wide.csv  ipc_afg_area_wide_latest.csv  ipc_afg_level1_long.csv  ipc_afg_level1_wide.csv  ipc_afg_national_long.csv  ipc_afg_national_long_latest.csv  ipc_afg_national_wide.csv  ipc_ago_area_long.csv  ipc_ago_area_long_latest.csv  ipc_ago_area_wide.csv  ipc_ago_area_wide_latest.csv  ipc_ago_level1_long.csv  ipc_ago_level1_long_latest.csv  ipc_ago_level1_wide.csv  ipc_ago_level1_wide_latest.csv  ipc_ago_national_long.csv  ipc_ago_national_long_latest.csv  ipc_ago_national_wide.csv  ipc_caf_area_long.csv  ipc_caf_area_long_latest.csv  ipc_caf_area_wide.csv  ipc_caf_area_wide_latest.csv  ipc_caf_level1_long.csv  ipc_caf_level1_long_latest.csv  ipc_caf_level1_wide.csv  ipc_caf_level1_wide_latest.csv  ipc_caf_national_long.csv  ipc_caf_national_long_latest.csv  ipc_caf_national_wide.csv  ipc_eth_area_long.csv  ipc_eth_area_long_latest.csv  ipc_eth_area_wide.csv  ipc_eth_area_wide_latest.csv  ipc_eth_level1_long.csv  ipc_eth_level1_long_latest.csv  ipc_eth_level1_wide.csv  (+16 more)
tests/fixtures/input/: analyses-type-a.json  dataset-global-acute-food-insecurity-country-data.json  download-global-pcode-lengths.csv  (+6 more)
(+7 files in other folders)
