#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-ipc"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-api>= 6.4.5",
  "hdx-python-country>= 3.9.4",
  "hdx-python-utilities>= 3.8.7",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]
