#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-ipc"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-scraper>= 2.6.5",
  "hdx-python-api>= 6.6.3",
  "hdx-python-country>= 4.0.1",
  "hdx-python-utilities>= 4.0.3",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]
